--- a/src/js/pages/myModal.sass
+++ b/src/js/pages/myModal.sass
@@ -1,5 +1,9 @@
+.react-redux-modal .rrm-holder .scroll .rrm-content .rrm-body
+  padding: 0;
 .myModal
+  padding: 0
   display: flex
   flex-flow: column wrap
-  width: 90%
   box-sizing: border-box
+  width: 100%
+  padding: 4%
