--- a/src/js/pages/Layout.sass
+++ b/src/js/pages/Layout.sass
@@ -30,9 +30,12 @@ body
   box-sizing: border-box
 
 .listRecipe
+  @extend .pad
   flex: 1
   height: 100vh
+  min-height: 300px
   overflow: auto
+  box-sizing: border-box
 
   h1
     padding: 0.4em 1.4em
@@ -57,6 +60,8 @@ body
 .detailsRecipe
   @extend .pad
   flex: 1
+  box-sizing: border-box
+  height: 100vh;
   border-left: 1px solid $borderColor;
 
 input, textarea
@@ -64,7 +69,7 @@ input, textarea
   line-height: 1.4em
   padding: 0.4em
   margin: 0.4em
-  width: 95%
+  width: 96%
 
 textarea
   resize: none
